[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/st_tile/gold.png" type="Texture" id=1]
[ext_resource path="res://fontes/FZFWTongQPOPTJW.tres" type="DynamicFont" id=2]
[ext_resource path="res://fontes/HGZDX_CNKI.tres" type="DynamicFont" id=3]
[ext_resource path="res://Sprites/texture/bkg1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/texture/bkg2.png" type="Texture" id=5]
[ext_resource path="res://res/button2.tres" type="Theme" id=6]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=7]
[ext_resource path="res://res/button1.tres" type="Theme" id=8]
[ext_resource path="res://fontes/comic.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Sprites/st_tile/dot.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=2]
size = 28
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="GDScript" id=1]
script/source = "extends Button


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass


func _on_Button1_pressed():
	# gb.goto_scene(_ending[1])
	pass # Replace with function body.
"

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="Region1" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -300.0
margin_bottom = 300.0
texture = ExtResource( 4 )
stretch_mode = 2

[node name="Label" type="Label" parent="Region1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = -287.0
margin_right = 184.0
margin_bottom = 287.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "· 游戏规则：

· 方向键操作小人的移动，BackSpace 可以撤销到上一步。有本地存档，每次会读取上一次的进度。


· 小人会在经过的路上留下痕迹。经过实心点时必须转弯，经过空心点时必须直行。已经走过的地方不能重复经过。

· 每个实心点或者空心点都存放着打开当前房间的钥匙。收集钥匙到达一定数量才可以打开相应的门。"
autowrap = true

[node name="GoldNum" type="Button" parent="."]
anchor_right = 10.0
margin_left = 11.0
margin_top = 7.0
margin_right = -11866.0
margin_bottom = 49.0
focus_mode = 0
theme = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = ": 0/0"
icon = ExtResource( 1 )

[node name="Win" type="TextureRect" parent="."]
margin_left = 255.0
margin_top = 198.0
margin_right = 579.0
margin_bottom = 375.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 1

[node name="Label1" type="Label" parent="Win"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -80.0
margin_top = 24.0
margin_right = 80.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0.729412, 0.203922, 0.203922, 1 )
custom_colors/font_color_shadow = Color( 1, 0.74902, 0.839216, 1 )
custom_fonts/font = ExtResource( 2 )
text = "恭喜通关！"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Win"]
margin_left = 24.706
margin_top = 125.034
margin_right = 164.706
margin_bottom = 158.034
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "是否进入下一关"
align = 1
valign = 1

[node name="Button1" type="Button" parent="Win"]
margin_left = 208.706
margin_top = 126.034
margin_right = 253.706
margin_bottom = 156.034
theme = ExtResource( 6 )
custom_colors/font_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
custom_fonts/font = ExtResource( 3 )
text = "是"

[node name="Button2" type="Button" parent="Win"]
margin_left = 253.628
margin_top = 126.034
margin_right = 298.628
margin_bottom = 156.034
theme = ExtResource( 6 )
custom_colors/font_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
custom_fonts/font = ExtResource( 3 )
text = "否"

[node name="Sprite" type="Sprite" parent="Win"]
position = Vector2( 100.771, 92.0629 )
texture = ExtResource( 1 )

[node name="GoldNum" type="Label" parent="Win"]
margin_left = 128.495
margin_top = 73.5128
margin_right = 215.494
margin_bottom = 112.513
custom_colors/font_color = Color( 0.341176, 0.34902, 0.262745, 1 )
custom_fonts/font = ExtResource( 2 )
text = ": 0/0"

[node name="Back" type="Button" parent="."]
margin_left = 652.0
margin_top = 7.0
margin_right = 787.0
margin_bottom = 49.0
theme = ExtResource( 8 )
custom_colors/font_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
custom_fonts/font = ExtResource( 3 )
text = "返回主页"
script = SubResource( 1 )

[node name="Collect" type="Button" parent="."]
anchor_right = 10.0
margin_left = 330.0
margin_top = 7.0
margin_right = -11493.0
margin_bottom = 49.0
focus_mode = 0
theme = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = ": 0/0"
icon = ExtResource( 10 )

[connection signal="pressed" from="Win/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Win/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
